k8s/shared-logs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shared-logs-demo
  namespace: library-system
spec:
  containers:
    - name: writer
      image: busybox
      command: ["/bin/sh", "-c", "while true; do echo $(date) - log entry from writer container >> /var/log/app/shared.log; sleep 5; done"]
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log/app
    - name: reader
      image: busybox
      command: ["/bin/sh", "-c", "tail -f /var/log/app/shared.log"]
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log/app
  volumes:
    - name: shared-logs
      persistentVolumeClaim:
        claimName: shared-logs-pvc
