k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-sys-api-gateway
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-sys-api-gateway
  template:
    metadata:
      labels:
        app: library-sys-api-gateway
    spec:
      containers:
        - name: library-sys-api-gateway
          image: <your-docker-username>/library-sys-api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: library-sys-api-gateway
  namespace: library-system
spec:
  type: LoadBalancer
  selector:
    app: library-sys-api-gateway
  ports:
    - port: 4000
      targetPort: 4000
