k8s/borrow-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-sys-borrow-service
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-sys-borrow-service
  template:
    metadata:
      labels:
        app: library-sys-borrow-service
    spec:
      containers:
        - name: library-sys-borrow-service
          image: <your-docker-username>/library-sys-borrow-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: library-sys-borrow-service
  namespace: library-system
spec:
  selector:
    app: library-sys-borrow-service
  ports:
    - port: 3002
      targetPort: 3002
