k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-sys-mongo
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-sys-mongo
  template:
    metadata:
      labels:
        app: library-sys-mongo
    spec:
      containers:
        - name: library-sys-mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: library-sys-mongo
  namespace: library-system
spec:
  selector:
    app: library-sys-mongo
  ports:
    - port: 27017
      targetPort: 27017
