k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-sys-redis
  namespace: library-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-sys-redis
  template:
    metadata:
      labels:
        app: library-sys-redis
    spec:
      containers:
        - name: library-sys-redis
          image: redis:7
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: library-sys-redis
  namespace: library-system
spec:
  selector:
    app: library-sys-redis
  ports:
    - port: 6379
      targetPort: 6379
