k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-sys-ingress
  namespace: library-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: library.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-sys-api-gateway
                port:
                  number: 4000
